restaurant-devops/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bistro-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: bistro.local
    http:
      paths:
      # Route all api calls to the gateway
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: bistro-api-gateway-service
            port:
              number: 8080
      # Route root traffic to react web page
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: bistro-frontend-service
            port:
              number: 80
